--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -16,6 +16,7 @@
   height: 50px;
   background-color: #FD98BB;
   text-align: center;
+  margin-top: 25px;
 }
   .homepage_sale-row a {
     font-size: 34px;
