--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,6 +1,6 @@
 /********** CeresSadingo Design **********/
 body {
-  background-color: #F4F4F4;
+  background-color: #fff;/*#F4F4F4;*/
   /*<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">*/
   font-family: 'Muli', sans-serif !important;
 }
@@ -99,7 +99,17 @@ a {
 /***** Warenkorb *****/
 /*Name des Produktes*/
 
-
+/***** Sidebar Categories*****/
+.sidebar-categories {
+  font-family: 'Muli', sans-serif !important;
+  border: 1px solid #ececec;
+}
+  .sidebar-categories a {
+    color: #4D4F4D !important;
+  }
+  .sidebar-categories ul li.active>a {
+    color: #e878aa !important;
+  }
 /***** Button *****/
 /*ausgefüllter Button*/
 .btn-primary {
