--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -114,6 +114,14 @@ a {
     color: #e878aa !important;
     background: #fff;
   }
+  .sidebar-categories ul li.active>a:after {
+    content: '\f107';
+    font-family: FontAwesome;
+    padding: 5px ;
+  }
+  .sidebar-categories ul li.active>a:last-child:after {
+    content: none;
+  }
 /***** Button *****/
 /*ausgefüllter Button*/
 .btn-primary {
