--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -125,6 +125,12 @@ a {
   .sidebar-categories ul li>a:last-child:after {
     content: none;
   }
+  .sidebar-categories ul li.active ul li ul li a {
+    padding-left: 4.5rem;
+  }
+  .sidebar-categories ul li.active ul li a {
+      padding-left: 2.5rem;
+  }
 /***** Button *****/
 /*ausgefüllter Button*/
 .btn-primary {
