--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -28,7 +28,6 @@ a {
 }
 .control-user {
   border-left: 1px solid;
-  border-right: 1px solid;
 }
 .control-user a:first-child {
   margin-right: -3px;
@@ -36,6 +35,14 @@ a {
 }
 .control-user .pipe {
   display: none;
+}
+/** Userbar Benutzer **/
+/*Farbe für das klicken auf den Benutzernamen*/
+.top-bar .controls-list > li a:hover, .top-bar .controls-list > li a[aria-expanded="true"] {
+  background-color: #fd98bb;
+}
+.account-menu .list-group-item small{
+  background-color: rgb(51, 51, 51);
 }
 /***** Menü (oben) *****/
 #mainNavbarCollapsable ul.mainmenu > li  {
