User Menü Oben style

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -38,8 +38,9 @@ a {
 }
 /** Userbar Benutzer **/
 /*Farbe für das klicken auf den Benutzernamen*/
-.top-bar .controls-list > li a:hover, .top-bar .controls-list > li a[aria-expanded="true"] {
+.account-menu .list-group-item:hover {
   background-color: #fd98bb;
+  width: 100%;
 }
 .account-menu .list-group-item {
   background-color: rgb(51, 51, 51);
