--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -47,7 +47,7 @@
             <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/perlenparadies.png" alt="Perlenparadies">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Perlenparadies</h4>
-              <p class="card-text">Entdecke im Perlenpadadies unsere Auswahl an verschiedenen Perlen.</p>
+              <p class="card-text">Entdecke im Perlenparadies unsere Auswahl an verschiedenen Perlen.</p>
               <a href="/perlenparadies" class="btn btn-outline-primary">Entdecken</a>
             </div>
           </div>
@@ -96,7 +96,7 @@
         </div>
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="..." alt="Basteln & Kreatives">
+            <img class="homepage_card_img card-img-top" src="..." alt="Neue Artikel">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Neue Artikel</h4>
               <p class="card-text">Guck dir mal unsere neuen Artikel hier im Shop an!</p></br>
