--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -86,7 +86,7 @@
         </div>
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="..." alt="Schmuckmaterial">
+            <img class="homepage_card_img card-img-top" src="..." alt="Specials">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Specials</h4>
               <p class="card-text">Unsere Specials kannst du dir hier angucken!</p></br>
