--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
             <img class="homepage_card_img card-img-top" src="..." alt="Neue Artikel">
             <div class="homepage_card-block card-block">
@@ -103,7 +103,7 @@
               <a href="/neue-artikel" class="btn btn-outline-primary">Entdecken</a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
