Startseite Design anpassungen

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -42,9 +42,9 @@
         <a href="https://www.sadingo.de/sale">SALE</a>
       </div>
       <div class="homepage_row row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/perlenparadies.png" alt="Perlenparadies">
+            <a href="/perlenparadies"><img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/perlenparadies.png" alt="Perlenparadies"></a>
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Perlenparadies</h4>
               <p class="card-text">Entdecke im Perlenparadies unsere Auswahl an verschiedenen Perlen.</p>
@@ -52,9 +52,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckmaterial.png" alt="Schmuckmaterial">
+            <a href="/schmuckmaterial"><img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckmaterial.png" alt="Schmuckmaterial"></a>
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckmaterial</h4>
               <p class="card-text">Suchst du Anhänger, Bänder oder auch Verschlüsse? Hier findest du was du suchst!</p>
@@ -62,9 +62,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/bastelnkreatives.png" alt="Basteln & Kreatives">
+            <a href="/basteln-kreatives"><img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/bastelnkreatives.png" alt="Basteln & Kreatives"></a>
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Basteln & Kreatives</h4>
               <p class="card-text">Bastelst du gerne? Dann schau hier rein!</p></br>
@@ -72,11 +72,9 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="homepage_row row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckstuecke.png" alt="Schmuckstücke">
+            <a href="/schmuckstuecke"><img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckstuecke.png" alt="Schmuckstücke"></a>
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckstücke</h4>
               <p class="card-text">Hier findest du einige Schmuckstücke.</p></br>
@@ -84,6 +82,8 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="homepage_row row">
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
             <img class="homepage_card_img card-img-top" src="..." alt="Specials">
