Slider Bild Set

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -1,6 +1,6 @@
 {% extends 'Ceres::Homepage.Homepage' %}
 {% set lang = services.sessionStorage.getLang() %}
-{% set homepageFirstSlideTitleDE  = config("CeresSadingo.homepage.homepageSliderImg1") %}
+{% set homepageSliderImg1  = config("CeresSadingo.homepage.homepageSliderImg1") %}
 
 {% block ThemeHomepage %}
 <div class="main_container_slider container-max page-content"><!--Anfang des Containers-->
