--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -1,6 +1,14 @@
 {% extends 'Ceres::Homepage.Homepage' %}
 {% set lang = services.sessionStorage.getLang() %}
+<!-- Slider Bilder -->
 {% set homepageSliderImg1  = config("CeresSadingo.homepage.homepageSliderImg1") %}
+{% set homepageSliderImg2  = config("CeresSadingo.homepage.homepageSliderImg2") %}
+{% set homepageSliderImg3  = config("CeresSadingo.homepage.homepageSliderImg3") %}
+<!-- Kategorien Bilder -->
+{% set homepageCategoriePerlenparadies  = config("CeresSadingo.homepage.homepagePerlenparadies") %}
+{% set homepageCategorieSchmuckmaterial  = config("CeresSadingo.homepage.homepageSchmuckmaterial") %}
+{% set homepageCategorieBastelnKreatives  = config("CeresSadingo.homepage.homepageBastelnKreatives") %}
+{% set homepageCategorieSchmuckstuecke  = config("CeresSadingo.homepage.homepageSchmuckstuecke") %}
 
 {% block ThemeHomepage %}
 <div class="main_container_slider container-max page-content"><!--Anfang des Containers-->
@@ -16,10 +24,10 @@
           <img class="d-block img-fluid" src="{{ homepageSliderImg1 }}" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="https://www.sadingo.de/images/gallery/Startseite/sliderVorschau-2.png" alt="Second slide">
+          <img class="d-block img-fluid" src="{{ homepageSliderImg2 }}" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="https://www.sadingo.de/images/gallery/Startseite/sliderVorschau-3.png" alt="Third slide">
+          <img class="d-block img-fluid" src="{{ homepageSliderImg3 }}" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -45,7 +53,7 @@
       <div class="homepage_row row">
         <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
-            <a href="/perlenparadies"><img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/perlenparadies.png" alt="Perlenparadies"></a>
+            <a href="/perlenparadies"><img class="homepage_card_img card-img-top" src="{{ homepageCategoriePerlenparadies }}" alt="Perlenparadies"></a>
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Perlenparadies</h4>
               <p class="card-text">Entdecke im Perlenparadies unsere Auswahl an verschiedenen Perlen.</p></br>
@@ -55,7 +63,7 @@
         </div>
         <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
-            <a href="/schmuckmaterial"><img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckmaterial.png" alt="Schmuckmaterial"></a>
+            <a href="/schmuckmaterial"><img class="homepage_card_img card-img-top" src="{{ homepageCategorieSchmuckmaterial }}" alt="Schmuckmaterial"></a>
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckmaterial</h4>
               <p class="card-text">Suchst du Anhänger, Bänder oder auch Verschlüsse? Hier findest du was du suchst!</p>
@@ -65,7 +73,7 @@
         </div>
         <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
-            <a href="/basteln-kreatives"><img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/bastelnkreatives.png" alt="Basteln & Kreatives"></a>
+            <a href="/basteln-kreatives"><img class="homepage_card_img card-img-top" src="{{ homepageCategorieBastelnKreatives }}" alt="Basteln & Kreatives"></a>
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Basteln & Kreatives</h4>
               <p class="card-text">Bastelst du gerne? Dann schau hier rein!</p></br>
@@ -75,7 +83,7 @@
         </div>
         <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
-            <a href="/schmuckstuecke"><img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckstuecke.png" alt="Schmuckstücke"></a>
+            <a href="/schmuckstuecke"><img class="homepage_card_img card-img-top" src="{{ homepageCategorieSchmuckstuecke }}" alt="Schmuckstücke"></a>
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckstücke</h4>
               <p class="card-text">Hier findest du einige Schmuckstücke.</p></br>
