--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -10,6 +10,9 @@
 {% set homepageCategorieBastelnKreatives  = config("CeresSadingo.homepage.homepageBastelnKreatives") %}
 {% set homepageCategorieSchmuckstuecke  = config("CeresSadingo.homepage.homepageSchmuckstuecke") %}
 
+{% set homepageCategorieSale  = config("CeresSadingo.homepage.homepageSale") %}
+
+
 {% block ThemeHomepage %}
 <div class="main_container_slider container-max page-content"><!--Anfang des Containers-->
 
@@ -93,11 +96,21 @@
         </div>
       </div>
       <div class="homepage_row row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
             <img class="homepage_card_img card-img-top" src="..." alt="Specials">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Specials</h4>
+              <p class="card-text">Unsere Specials kannst du dir hier angucken!</p></br>
+              <a href="/specials" class="btn btn-outline-primary">Entdecken</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="homepage_card card" style="width: 20rem;">
+            <img class="homepage_card_img card-img-top" src="{{ homepageCategorieSale }}" alt="Specials">
+            <div class="homepage_card-block card-block">
+              <h4 class="card-title">Sale</h4>
               <p class="card-text">Unsere Specials kannst du dir hier angucken!</p></br>
               <a href="/specials" class="btn btn-outline-primary">Entdecken</a>
             </div>
