--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -111,7 +111,7 @@
             <img class="homepage_card_img card-img-top" src="{{ homepageCategorieSale }}" alt="Specials">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Sale</h4>
-              <p class="card-text">Unsere Specials kannst du dir hier angucken!</p></br>
+              <p class="card-text">Schau dir unsere reduzierten Produkte an!</p></br>
               <a href="/specials" class="btn btn-outline-primary">Entdecken</a>
             </div>
           </div>
