--- a/resources/views/ItemList/ItemListView.twig
+++ b/resources/views/ItemList/ItemListView.twig
@@ -40,6 +40,7 @@
         <div class="row m-t-1">
             <div class="col-xs-12">
                 <h1 class="h4">{{ category.details.first.name }}</h1>
+                <h2> SadingoItemList </h2>
             </div>
         </div>
 
