--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -99,6 +99,18 @@
         </div>
       </div>
       <div class="homepage_row row">
+        <div class="col homepage_facebook">
+          <a href="https://de-de.facebook.com/sadingoShopping/">
+
+          </a>
+        </div>
+        <div class="col homepage_Instagram">
+          <a href="https://www.instagram.com/sadingoshopping/">
+            
+          </a>
+        </div>
+      </div>
+      <div class="homepage_row row">
         <div class="col-md-3">
           <div class="homepage_card card" style="width: 20rem;">
             <img class="homepage_card_img card-img-top" src="..." alt="Specials">
