Sozial auf der Startseite angepasst

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -99,14 +99,14 @@
         </div>
       </div>
       <div class="homepage_row row">
-        <div class="col-md-6 homepage_facebook">
+        <div class="col-md-6">
           <a href="https://de-de.facebook.com/sadingoShopping/">
-            <div class="homepage_facebook"> </div>
+            <div class="homepage_facebook"><p>Facebook</p></div>
           </a>
         </div>
-        <div class="col-md-6 homepage_instagram">
+        <div class="col-md-6">
           <a href="https://www.instagram.com/sadingoshopping/">
-            <div class="homepage_instagram"> </div>
+            <div class="homepage_instagram"><p>Instagram</p></div>
           </a>
         </div>
       </div>
