--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -45,3 +45,23 @@
   .homepage_card_img:hover {
     border: 2px solid #FF80AB;
   }
+/*****Sozial*****/
+  .homepage_instagram, .homepage_facebook {
+    height: 120px;
+    border-radius: 0.1rem;
+    border: 1px solid rgba(0,0,0,.125);
+    font-size: 24px;
+    text-align: center;
+    line-height: 120px;
+    opacity: 0.5;
+    color: #fff;
+  }
+  .homepage_facebook {
+    background: #3B5998;
+  }
+  .homepage_instagram {
+    background: #E54755;
+  }
+  .homepage_facebook:hover, .homepage_instagram:hover {
+      font-size: 30px;
+  }
