--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -99,6 +99,7 @@
         </div>
       </div>
       <div class="homepage_row row">
+        <h3 style="text-align: center; margin-bottom: 25px;">Besuche uns auf Facebook und Instagram</h3>
         <div class="col-md-6">
           <a href="https://de-de.facebook.com/sadingoShopping/">
             <div class="homepage_facebook"><p>Facebook</p></div>
