--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,315 +1,4 @@
-/********** CeresSadingo Design ***********************************************/
-body {
-  background-color: #fff;/*#F4F4F4;*/
-  /*<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">*/
-  font-family: 'Muli', sans-serif !important;
-}
-a {
-  color: #e878aa !important;
-}
-/*Text größe Artikelübersicht Breadcrumb*/
-.basket-preview .totals, .btn-labeled, .small, small {
-  font-size: 100% !important;
-}
-/***** Userbar (oben) *********************************************************/
-.controls-list a {
-  color: #fff !important;
-}
-.top-bar {
-  background-color: rgb(51, 51, 51);
-}
-.top-bar .controls-list .control-basket .toggle-basket-preview {
-  background: #FD98BB !important;
-  border-bottom: solid 1px;
-  padding-bottom: 6px;
-}
-.controls-list a:hover {
-  background: rgb(51, 51, 51) !important;
-}
-.control-user {
-  border-left: 1px solid;
-}
-.control-user a:first-child {
-  margin-right: -3px;
-  border-right: 1px solid;
-}
-.control-user .pipe {
-  display: none;
-}
-.account-menu a:hover{
-  text-decoration: underline;
-}
-/** Userbar Benutzer **********************************************************/
-/*Farbe für das klicken auf den Benutzernamen*/
-.top-bar .controls-list > li a:hover, .top-bar .controls-list > li a[aria-expanded="true"] {
-  background-color: #fd98bb;
-}
-.account-menu .list-group-item {
-  background-color: rgb(51, 51, 51);
-  width: 100%;
-}
-/** myaccount **/
-.myaccount fa:hover {
-  color: #FCA9C6;
-}
-.myaccount .dropdown-menu .item-inner {
-  background-color: #FCA9C6;
-}
-/*Rechnungsadressen */
-.cmp-address-list .item-edit .fa, .cmp-address-list .item-remove .fa {
-  color: #4d4f4d;
-}
-.cmp-address-list .item-edit .fa:hover {
-  color: #4d4f4d;
-}
-.cmp-address-list .item input:checked + .item-inner {
-  background-color: #FCA9C6;
-}
-.add-item .fa:hover {
-  color: #fd98bb;
-}
-.card .item-edit .fa:hover, .cmp-address-list .items > div:first-child .item-edit .fa:hover {
-  color: #fd98bb;
-}
-/*Bestelldetails*/
-.loading-animation > div {
-  background-color: #FF80AB;
-}
-/***** Länder Auswahl *********************************************************/
-.cmp-country-settings ul li.active a {
-  background-color: transparent;
-  color: #fff;
-}
-.cmp-country-settings ul li.active a:hover {
-    background-color: transparent;
-}
-/***** Menü (oben) ************************************************************/
-#mainNavbarCollapsable ul.mainmenu > li  {
-  position: static !important;
-}
-#mainNavbarCollapsable ul.mainmenu > li > ul > li {
-  display: block;
-  width: 33.3333%;
-  text-align: left;
-  float: left;
-}
-/* Menü Icons*/
-#mainNavbarCollapsable ul.mainmenu li.ddown>a:after {
-  content: "\f105";
-}
-@media (min-width: 992px) {
-  #mainNavbarCollapsable ul.mainmenu>li.ddown>a:after {
-      content: "\f107";
-  }
-}
-/***** Menü Leiste (oben) *****************************************************/
-.wrapper-main>nav.container-max {
-  background-color: #fff !important;
-}
-.breadcrumb a {
-  color: #e878aa !important;
-}
-.navbar {
-  background-color: #FF80AB !important;
-}
-/*Dropdown Kategorien*/
-#mainNavbarCollapsable ul.mainmenu>li>ul {
-  background: #FD98BB !important;
-  padding: 25px;
-}
-  #mainNavbarCollapsable ul.mainmenu>li>ul>li:hover {
-  background: #FD98BB !important;
-  }
-  #mainNavbarCollapsable ul.mainmenu>li>ul>li a:hover {
-    text-decoration: underline;
-  }
-  #mainNavbarCollapsable ul.mainmenu>li:hover {
-    background: #FD98BB !important;
-  }
-
-/*Links der Menü Leiste*/
-.wrapper-main .navbar{
-  font-family: 'Muli', sans-serif !important;
-}
-
-.wrapper-main .navbar a {
-  color: #fff !important;
-}
-/*Farbe der Menü fenster*/
-.wrapper-main .navbar .navbar-nav .nav-item:hover .dropdown-menu .dropdown-item {
-    color: #000 !important;
-}
-.wrapper-main .navbar .navbar-nav .nav-item>.nav-link {
-    border: none !important;
-}
-/***** Warenkorb **************************************************************/
-/*Name des Produktes*/
-/***** Artikel Seite **********************************************************/
-.owl-theme .owl-nav [class*=owl-] {
-  background-color: #FD98BB;
-  color: #fff;
-}
-.col-md-7 {
-  z-index: 999;
-}
-  .owl-theme .owl-nav [class*=owl-]:hover {
-    background-color: #FF80AB;
-  }
-  .single-rightside {
-    float: right;
-  }
-  .crossprice {
-    display: none !important;
-  }
-  .cmp-product-thumb .thumb-meta .vat-porto-info {
-      font-size: 10px !important;
-  }
-  .single-leftside {
-    height: 500px;
-  }
-  .owl-lazy {
-    width: 400px !important;
-    height: 400px !important;
-  }
-  .owl-height {
-    height: 400px !important;
-        text-align: center;
-  }
-  .owl-carousel .owl-single-item-control {
-    color: #FD98BB !important;
-    opacity: 0.9;
-  }
-    .owl-carousel .owl-single-item-control:hover {
-      color: #FD98BB !important;
-      opacity: 1;
+    /* Change background colour */
+    body {
+        background-color: #808080;
     }
-  .owl-carousel .owl-dots {
-    top: 385px;
-  }
-  .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-    background: #FF80AB !important;
-  }
-  .owl-thumbs .owl-thumb.active, .owl-thumbs .owl-thumb:hover {
-    border: 1px solid #FF80AB;
-  }
-/***** Sidebar Categories *****************************************************/
-.sidebar-categories {
-  font-family: 'Muli', sans-serif !important;
-  border: 1px solid #ececec;
-}
-  .sidebar-categories .category-title {
-      background: #fff;
-  }
-  .sidebar-categories a {
-    color: #4D4F4D !important;
-  }
-  .sidebar-categories ul li.active>a {
-    color: #e878aa !important;
-    background: #fff;
-  }
-  .sidebar-categories ul li>a:first-of-type:after {
-      content: '\f107';
-      font-family: FontAwesome;
-      padding: 5px ;
-  }
-  .sidebar-categories ul li.active>a:last-child:after {
-    content: none;
-  }
-  .sidebar-categories ul li>a:last-child:after {
-    content: none;
-  }
-  .sidebar-categories ul li.active ul li ul li a {
-    padding-left: 4.5rem;
-  }
-  .sidebar-categories ul li.active ul li a {
-      padding-left: 2.5rem;
-  }
-/***** Button *****/
-/*ausgefüllter Button*/
-.btn-primary {
-  color: #fff !important;
-  background-color: #FF80AB;
-  border-color: #FF80AB;
-}
-  .btn-primary:hover {
-    background-color: #FF80AB;
-    border-color: #FF80AB;
-  }
-  .btn-primary:active:hover {
-    background-color: #FF80AB;
-    border-color: #FF80AB;
-  }
-  .btn-primary:focus {
-    background-color: #FF80AB;
-    border-color: #FF80AB;
-  }
-.btn-danger {
-    color: #fff !important;
-}
-/*neuheit Button*/
-.bg-primary {
-    background-color: #FF80AB !important;
-}
-/*Nicht ausgefüllter Button*/
-.btn-outline-primary {
-  color: #FF80AB;
-  border-color: #FF80AB;
-}
-  .btn-outline-primary:hover {
-    color: #fff !important;
-    background-color: #FF80AB;
-    border-color: #FF80AB;
-  }
-.btn-outline-primary:active:hover, .btn-outline-primary:focus{
-    background-color: #FF80AB;
-    border-color: #FF80AB;
-    color: #fff;
-}
-/*Suche Button*/
-.cmp-search-box .search-submit {
-  color: #FF80AB !important;
-}
-/***** Content *****/
-.page-content {
-  background: #fff;
-  padding: 20px;
-}
-/*Abstand nach oben*/
-.wrapper-main #page-body{
-  margin-top: 100px;
-}
-/*Filter oben*/
-.list-controls .list-controls-inner {
-  background: #F4F4F4;
-}
-/*Artikel*/
-/*Seiten navbar (unten)*/
-.page-item.active .page-link, .page-item.active .page-link:focus, .page-item.active .page-link:hover{
-  background-color: #FD98BB;
-  border-color: #FD98BB;
-  color: #fff !important;
-}
-.page-item .page-link {
-  color: #FD98BB !important;
-}
-/*****Artikelseite*****/
-/*Sofort versandfertig,Lieferzeit 2-3Tage*/
-.availability_1, .availability_2{
-  background-color: #00c174;
-}
-
-/***** Mobile *****/
-.navbar-toggler{
-  color: #fff;
-}
-@media (max-width: 992px){
-#mainNavbarCollapsable{
-  background-color: #fff;
-}
-  #mainNavbarCollapsable a{
-    color: #e878aa !important;
-  }
-    #mainNavbarCollapsable a:hover{
-      color: #fff !important;
-    }
-}
